--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,10 +6,10 @@
     android:layout_height="match_parent"
     tools:context=".activity.MainActivity">
 
-    <fragment
-        android:id="@+id/fragment"
-        android:name="com.dehaat.dehaatassignment.fragment.AuthorListFrament"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+<!--    <fragment-->
+<!--        android:id="@+id/fragment"-->
+<!--        android:name="com.dehaat.dehaatassignment.fragment.AuthorListFrament"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="match_parent" />-->
 
 </FrameLayout>
