Data Retrieval and ui data set up

--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -5,20 +5,10 @@
     android:layout_height="match_parent"
     android:orientation="horizontal"
     tools:context=".activity.MainActivity">
+    <fragment
+        android:id="@+id/authorFragment"
+        android:name="com.dehaat.dehaatassignment.fragment.AuthorListFrament"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
-
-<!--    <fragment-->
-<!--        android:id="@+id/fragment1"-->
-<!--        android:name="com.dehaat.dehaatassignment.fragment.AuthorListFrament"-->
-<!--        android:layout_width="0dp"-->
-<!--        android:layout_height="match_parent"-->
-<!--        android:layout_weight="1" />-->
-
-<!--    <fragment-->
-<!--        android:id="@+id/fragment2"-->
-<!--        android:name="com.dehaat.dehaatassignment.fragment.AuthorListFrament"-->
-<!--        android:layout_width="0dp"-->
-<!--        android:layout_height="match_parent"-->
-
-<!--        android:layout_weight="1" />-->
 </LinearLayout>
