--- a/app/src/main/res/layout/author_list_frament_fragment.xml
+++ b/app/src/main/res/layout/author_list_frament_fragment.xml
@@ -5,9 +5,26 @@
     android:layout_height="match_parent"
     tools:context=".fragment.AuthorListFrament">
 
-    <TextView
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/list"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Hello" />
+        android:layout_height="wrap_content"
+        android:padding="@dimen/text_margin"
+        tools:context=".ui.fragment.NewsListFragment"/>
+
+    <TextView
+        android:id="@+id/errorText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:visibility="gone"/>
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        android:layout_gravity="center"/>
 
 </FrameLayout>
