--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -17,4 +17,26 @@
         <item name="overlapAnchor">false</item>
     </style>
 
+    <style name="text">
+        <item name="android:typeface">sans</item>
+    </style>
+
+    <style name="TextTitle" parent="text">
+        <item name="android:textStyle">bold</item>
+        <item name="android:textColor">#000000</item>
+        <item name="android:textSize">20sp</item>
+    </style>
+
+    <style name="TextList" parent="text">
+        <item name="android:textStyle">normal</item>
+        <item name="android:textColor">#43474f</item>
+        <item name="android:textSize">18sp</item>
+    </style>
+
+    <style name="TextDetail" parent="text">
+        <item name="android:textStyle">normal</item>
+        <item name="android:textColor">#F2F2F2</item>
+        <item name="android:textSize">20sp</item>
+    </style>
+
 </resources>
