--- a/app/src/main/res/layout/item_book_list.xml
+++ b/app/src/main/res/layout/item_book_list.xml
@@ -32,12 +32,13 @@
                 android:layout_height="wrap_content"
                 android:layout_marginRight="8dp"
                 android:layout_toLeftOf="@+id/price"
+                android:textSize="18sp"
                 android:text="@{book.title}"
-                tools:text=" Author Name" />
+                tools:text="Book Title" />
 
             <TextView
                 android:id="@+id/price"
-                style="@style/TextList"
+                style="@style/TextBookList"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
@@ -49,32 +50,32 @@
 
             <TextView
                 android:id="@+id/publisher"
-                style="@style/TextList"
+                style="@style/TextBookList"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/bookTitle"
-                android:layout_marginTop="8dp"
                 android:maxLines="3"
-                android:text="@{`Publisher: ` +book.publisher}"
-                tools:text="Publisher: Maple Press" />
+                android:text="@{book.publisher}"
+                tools:text="Maple Press" />
 
-            <TextView
-                android:id="@+id/publishDate"
-                style="@style/TextList"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/publisher"
-                android:maxLines="3"
-                android:text="@{`Published On: ` + book.published_date}"
-                tools:text="Published On: 01-01-2013" />
+<!--            <TextView-->
+<!--                android:id="@+id/publishDate"-->
+<!--                style="@style/TextBookList"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_alignParentRight="true"-->
+<!--                android:layout_below="@+id/bookTitle"-->
+<!--                android:maxLines="3"-->
+<!--                android:text="@{`Published On: ` + book.published_date}"-->
+<!--                tools:text="01-01-2013" />-->
 
             <TextView
                 android:id="@+id/bookDescription"
-                style="@style/TextList"
+                style="@style/TextBookList"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/publishDate"
-                android:layout_marginTop="8dp"
+                android:layout_below="@+id/publisher"
+                android:layout_marginTop="4dp"
                 android:maxLines="3"
                 android:text="@{book.description}"
                 tools:text="William Shakespeare(April 26, 1564 (baptism)–d. April 23, 1616) was an English poet " />
