--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -32,7 +32,11 @@
         <item name="android:textColor">#43474f</item>
         <item name="android:textSize">18sp</item>
     </style>
-
+    <style name="TextBookList" parent="text">
+        <item name="android:textStyle">normal</item>
+        <item name="android:textColor">#43474f</item>
+        <item name="android:textSize">14sp</item>
+    </style>
     <style name="TextDetail" parent="text">
         <item name="android:textStyle">normal</item>
         <item name="android:textColor">#F2F2F2</item>
